[gd_scene load_steps=9 format=2]

[ext_resource path="res://sprites/maps/protomap.png" type="Texture" id=1]
[ext_resource path="res://src/Maps/ProtoMap/ProtoMap.gd" type="Script" id=2]

[sub_resource type="ArrayMesh" id=1]
surfaces/0 = {
"aabb": AABB( -575.8, -217, 0, 1211.5, 586, 0 ),
"array_data": PoolByteArray( 0, 128, 106, 67, 154, 25, 87, 195, 5, 191, 31, 63, 136, 136, 128, 62, 0, 128, 111, 67, 154, 25, 84, 195, 77, 108, 32, 63, 165, 79, 130, 62, 0, 128, 111, 67, 51, 51, 79, 195, 77, 108, 32, 63, 254, 54, 133, 62, 208, 76, 107, 67, 0, 0, 75, 195, 191, 218, 31, 63, 38, 180, 135, 62, 48, 179, 100, 67, 0, 0, 75, 195, 2, 246, 30, 63, 38, 180, 135, 62, 96, 102, 126, 66, 0, 0, 58, 195, 44, 156, 8, 63, 28, 199, 145, 62, 96, 102, 96, 66, 0, 0, 58, 195, 63, 152, 7, 63, 28, 199, 145, 62, 96, 102, 64, 66, 0, 0, 61, 195, 254, 130, 6, 63, 0, 0, 144, 62, 0, 0, 172, 65, 0, 0, 61, 195, 31, 233, 2, 63, 0, 0, 144, 62, 0, 128, 27, 195, 0, 0, 68, 195, 189, 229, 213, 62, 19, 218, 139, 62, 0, 128, 27, 195, 0, 128, 70, 195, 189, 229, 213, 62, 209, 94, 138, 62, 204, 204, 30, 195, 0, 0, 76, 195, 1, 1, 213, 62, 114, 28, 135, 62, 52, 179, 29, 195, 0, 0, 78, 195, 63, 77, 213, 62, 9, 237, 133, 62, 152, 153, 28, 195, 0, 0, 78, 195, 126, 153, 213, 62, 9, 237, 133, 62, 152, 153, 26, 195, 0, 0, 81, 195, 31, 36, 214, 62, 237, 37, 132, 62, 0, 128, 0, 195, 0, 0, 81, 195, 52, 53, 221, 62, 237, 37, 132, 62, 0, 128, 0, 195, 0, 0, 82, 195, 52, 53, 221, 62, 57, 142, 131, 62, 0, 0, 157, 194, 0, 0, 82, 195, 226, 190, 234, 62, 57, 142, 131, 62, 0, 128, 77, 67, 0, 0, 88, 195, 249, 209, 27, 63, 0, 0, 128, 62, 0, 128, 77, 67, 0, 0, 89, 195, 249, 209, 27, 63, 152, 208, 126, 62, 0, 128, 106, 67, 0, 0, 89, 195, 5, 191, 31, 63, 152, 208, 126, 62, 0, 0, 253, 194, 152, 153, 83, 194, 213, 191, 221, 62, 224, 166, 224, 62, 0, 0, 253, 194, 0, 0, 74, 194, 213, 191, 221, 62, 247, 18, 226, 62, 104, 102, 246, 194, 0, 0, 52, 194, 145, 164, 222, 62, 85, 85, 229, 62, 152, 153, 248, 194, 0, 0, 44, 194, 82, 88, 222, 62, 190, 132, 230, 62, 0, 0, 252, 194, 0, 0, 44, 194, 125, 226, 221, 62, 190, 132, 230, 62, 0, 0, 6, 195, 0, 0, 28, 194, 251, 183, 219, 62, 142, 227, 232, 62, 204, 76, 16, 195, 0, 0, 28, 194, 13, 238, 216, 62, 142, 227, 232, 62, 52, 179, 192, 195, 0, 0, 80, 193, 138, 166, 151, 62, 218, 75, 248, 62, 154, 89, 196, 195, 0, 0, 80, 193, 141, 172, 149, 62, 218, 75, 248, 62, 0, 192, 249, 195, 48, 51, 5, 194, 185, 131, 113, 62, 69, 68, 236, 62, 0, 192, 249, 195, 0, 0, 14, 194, 185, 131, 113, 62, 133, 246, 234, 62, 102, 102, 251, 195, 0, 0, 36, 194, 65, 186, 111, 62, 38, 180, 231, 62, 154, 217, 250, 195, 0, 0, 44, 194, 190, 82, 112, 62, 190, 132, 230, 62, 205, 76, 250, 195, 0, 0, 44, 194, 59, 235, 112, 62, 190, 132, 230, 62, 205, 76, 249, 195, 0, 0, 56, 194, 125, 0, 114, 62, 161, 189, 228, 62, 0, 192, 237, 195, 0, 0, 56, 194, 198, 130, 126, 62, 161, 189, 228, 62, 0, 192, 237, 195, 0, 0, 60, 194, 198, 130, 126, 62, 237, 37, 228, 62, 0, 192, 213, 195, 0, 0, 60, 194, 113, 64, 140, 62, 237, 37, 228, 62, 0, 128, 29, 195, 0, 0, 84, 194, 28, 91, 213, 62, 180, 151, 224, 62, 0, 128, 29, 195, 104, 102, 88, 194, 28, 91, 213, 62, 212, 240, 223, 62, 0, 224, 10, 68, 96, 102, 178, 193, 218, 51, 75, 63, 2, 201, 242, 62, 0, 224, 10, 68, 160, 153, 137, 193, 218, 51, 75, 63, 178, 206, 245, 62, 52, 211, 9, 68, 0, 0, 80, 193, 75, 162, 74, 63, 218, 75, 248, 62, 0, 0, 8, 68, 0, 0, 80, 193, 76, 165, 73, 63, 218, 75, 248, 62, 52, 243, 234, 67, 0, 0, 176, 65, 59, 157, 63, 63, 190, 132, 6, 63, 104, 230, 232, 67, 0, 0, 176, 65, 35, 15, 63, 63, 190, 132, 6, 63, 104, 230, 229, 67, 0, 0, 136, 65, 50, 63, 62, 63, 123, 9, 5, 63, 52, 51, 226, 67, 0, 0, 136, 65, 188, 62, 61, 63, 123, 9, 5, 63, 0, 128, 85, 67, 64, 51, 51, 193, 58, 231, 28, 63, 235, 92, 249, 62, 0, 128, 85, 67, 0, 0, 88, 193, 58, 231, 28, 63, 0, 0, 248, 62, 48, 51, 82, 67, 0, 0, 152, 193, 219, 116, 28, 63, 161, 189, 244, 62, 208, 76, 83, 67, 0, 0, 168, 193, 252, 154, 28, 63, 57, 142, 243, 62, 104, 102, 84, 67, 0, 0, 168, 193, 27, 193, 28, 63, 57, 142, 243, 62, 104, 102, 86, 67, 0, 0, 192, 193, 107, 6, 29, 63, 28, 199, 241, 62, 0, 192, 149, 67, 0, 0, 192, 193, 182, 139, 40, 63, 28, 199, 241, 62, 0, 160, 7, 68, 0, 0, 208, 193, 80, 113, 73, 63, 180, 151, 240, 62, 0, 160, 7, 68, 208, 204, 224, 193, 80, 113, 73, 63, 32, 89, 239, 62, 0, 224, 29, 68, 0, 128, 14, 67, 196, 125, 85, 63, 228, 56, 42, 63, 204, 236, 30, 68, 0, 0, 23, 67, 83, 15, 86, 63, 161, 189, 44, 63, 0, 0, 30, 68, 0, 0, 23, 67, 24, 143, 85, 63, 161, 189, 44, 63, 0, 192, 137, 67, 204, 12, 181, 67, 242, 75, 37, 63, 244, 73, 107, 63, 0, 192, 137, 67, 102, 102, 181, 67, 242, 75, 37, 63, 13, 127, 107, 63, 104, 166, 134, 67, 0, 128, 184, 67, 20, 117, 36, 63, 85, 85, 109, 63, 152, 25, 132, 67, 0, 128, 184, 67, 83, 196, 35, 63, 85, 85, 109, 63, 0, 224, 13, 196, 152, 153, 28, 67, 19, 177, 76, 62, 102, 102, 46, 63, 0, 224, 13, 196, 52, 179, 27, 67, 19, 177, 76, 62, 34, 34, 46, 63, 0, 32, 15, 196, 152, 153, 26, 67, 240, 251, 73, 62, 178, 206, 45, 63, 0, 32, 15, 196, 0, 128, 24, 67, 240, 251, 73, 62, 104, 47, 45, 63, 51, 243, 15, 196, 0, 0, 19, 67, 120, 50, 72, 62, 57, 142, 43, 63, 205, 172, 15, 196, 0, 0, 17, 67, 245, 202, 72, 62, 133, 246, 42, 63, 102, 102, 15, 196, 0, 0, 17, 67, 115, 99, 73, 62, 133, 246, 42, 63, 102, 230, 14, 196, 0, 0, 14, 67, 180, 120, 74, 62, 247, 18, 42, 63, 0, 192, 134, 195, 0, 0, 14, 67, 253, 7, 183, 62, 247, 18, 42, 63, 0, 64, 163, 67, 0, 0, 13, 67, 114, 51, 44, 63, 28, 199, 41, 63, 0, 64, 163, 67, 0, 0, 12, 67, 114, 51, 44, 63, 66, 123, 41, 63, 0, 224, 29, 68, 0, 0, 12, 67, 196, 125, 85, 63, 66, 123, 41, 63 ),
"array_index_data": PoolByteArray( 0, 0, 1, 0, 2, 0, 2, 0, 3, 0, 4, 0, 4, 0, 5, 0, 6, 0, 7, 0, 8, 0, 9, 0, 10, 0, 11, 0, 12, 0, 13, 0, 14, 0, 15, 0, 15, 0, 16, 0, 17, 0, 18, 0, 19, 0, 20, 0, 0, 0, 2, 0, 4, 0, 4, 0, 6, 0, 7, 0, 7, 0, 9, 0, 10, 0, 10, 0, 12, 0, 13, 0, 13, 0, 15, 0, 17, 0, 18, 0, 20, 0, 0, 0, 0, 0, 4, 0, 7, 0, 7, 0, 10, 0, 13, 0, 13, 0, 17, 0, 18, 0, 18, 0, 0, 0, 7, 0, 7, 0, 13, 0, 18, 0, 40, 0, 21, 0, 22, 0, 22, 0, 23, 0, 24, 0, 25, 0, 26, 0, 27, 0, 27, 0, 28, 0, 29, 0, 29, 0, 30, 0, 31, 0, 31, 0, 32, 0, 33, 0, 34, 0, 35, 0, 36, 0, 36, 0, 37, 0, 38, 0, 39, 0, 40, 0, 22, 0, 22, 0, 24, 0, 25, 0, 25, 0, 27, 0, 29, 0, 29, 0, 31, 0, 33, 0, 34, 0, 36, 0, 38, 0, 38, 0, 39, 0, 22, 0, 22, 0, 25, 0, 29, 0, 29, 0, 33, 0, 34, 0, 34, 0, 38, 0, 22, 0, 22, 0, 29, 0, 34, 0, 57, 0, 41, 0, 42, 0, 42, 0, 43, 0, 44, 0, 44, 0, 45, 0, 46, 0, 47, 0, 48, 0, 49, 0, 50, 0, 51, 0, 52, 0, 53, 0, 54, 0, 55, 0, 56, 0, 57, 0, 42, 0, 44, 0, 46, 0, 47, 0, 47, 0, 49, 0, 50, 0, 50, 0, 52, 0, 53, 0, 53, 0, 55, 0, 56, 0, 56, 0, 42, 0, 44, 0, 44, 0, 47, 0, 50, 0, 50, 0, 53, 0, 56, 0, 56, 0, 44, 0, 50, 0, 58, 0, 59, 0, 60, 0, 61, 0, 62, 0, 63, 0, 63, 0, 64, 0, 65, 0, 66, 0, 67, 0, 68, 0, 68, 0, 69, 0, 70, 0, 71, 0, 72, 0, 73, 0, 74, 0, 75, 0, 76, 0, 58, 0, 60, 0, 61, 0, 61, 0, 63, 0, 65, 0, 66, 0, 68, 0, 70, 0, 71, 0, 73, 0, 74, 0, 74, 0, 76, 0, 58, 0, 58, 0, 61, 0, 65, 0, 66, 0, 70, 0, 71, 0, 71, 0, 74, 0, 58, 0, 58, 0, 65, 0, 66, 0, 66, 0, 71, 0, 58, 0 ),
"blend_shape_data": [  ],
"format": 262417,
"index_count": 207,
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 77
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 170, 1 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 170, 1 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 150, 1 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 611.5, 116.75 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 97.5, 400 )

[node name="ProtoMap" type="Node2D"]
pause_mode = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_vertical_guides_": [ 1024.0 ]
}

[node name="Sprite" type="MeshInstance2D" parent="."]
position = Vector2( 502, 240 )
scale = Vector2( 0.590012, 0.732082 )
mesh = SubResource( 1 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="upPlatform" type="StaticBody2D" parent="Sprite" groups=["PLATFORM"]]
collision_layer = 8
collision_mask = 0

[node name="Coll" type="CollisionShape2D" parent="Sprite/upPlatform"]
position = Vector2( 39.2105, -203.97 )
shape = SubResource( 2 )
one_way_collision = true

[node name="leftPlatform" type="StaticBody2D" parent="Sprite" groups=["PLATFORM"]]
collision_layer = 8
collision_mask = 0

[node name="Coll" type="CollisionShape2D" parent="Sprite/leftPlatform"]
position = Vector2( -315.247, -39.6131 )
shape = SubResource( 3 )
one_way_collision = true

[node name="rightPLatform" type="StaticBody2D" parent="Sprite" groups=["PLATFORM"]]
collision_layer = 8
collision_mask = 0

[node name="Coll" type="CollisionShape2D" parent="Sprite/rightPLatform"]
position = Vector2( 385.119, -16.6107 )
shape = SubResource( 4 )
one_way_collision = true

[node name="floor" type="StaticBody2D" parent="Sprite"]
collision_layer = 4
collision_mask = 0

[node name="Coll" type="CollisionPolygon2D" parent="Sprite/floor"]
position = Vector2( 33.4714, 186.512 )
scale = Vector2( 39.9465, 34.297 )
polygon = PoolVector2Array( -14.9022, -0.977467, 14.2914, -0.977465, 5.82341, 5.07633 )

[node name="UpKillbox" type="Area2D" parent="." groups=["KILLBOX"]]
position = Vector2( 510, -217 )
collision_layer = 4
collision_mask = 4
__meta__ = {
"_edit_group_": true
}

[node name="Coll" type="CollisionShape2D" parent="UpKillbox"]
shape = SubResource( 5 )

[node name="DownKillbox" type="Area2D" parent="." groups=["KILLBOX"]]
position = Vector2( 511, 817 )
collision_layer = 4
collision_mask = 4
__meta__ = {
"_edit_group_": true
}

[node name="Coll" type="CollisionShape2D" parent="DownKillbox"]
shape = SubResource( 5 )

[node name="LeftKillbox" type="Area2D" parent="." groups=["KILLBOX"]]
position = Vector2( -198, 301 )
collision_layer = 4
collision_mask = 4
__meta__ = {
"_edit_group_": true
}

[node name="Coll" type="CollisionShape2D" parent="LeftKillbox"]
position = Vector2( 0, -1 )
shape = SubResource( 6 )

[node name="RightKillbox" type="Area2D" parent="." groups=["KILLBOX"]]
position = Vector2( 1221, 301 )
collision_layer = 4
collision_mask = 4
__meta__ = {
"_edit_group_": true
}

[node name="Coll" type="CollisionShape2D" parent="RightKillbox"]
position = Vector2( 0, -1 )
shape = SubResource( 6 )

[node name="LeftPos" type="Position2D" parent="."]
position = Vector2( 323, 280 )

[node name="RightPos" type="Position2D" parent="."]
position = Vector2( 735, 280 )

[connection signal="body_entered" from="UpKillbox" to="." method="_UpKillbox_body_entered"]
[connection signal="body_entered" from="DownKillbox" to="." method="_DownKillbox_body_entered"]
[connection signal="body_entered" from="LeftKillbox" to="." method="_LeftKillbox_body_entered"]
[connection signal="body_entered" from="RightKillbox" to="." method="_RightKillbox_body_entered"]
